<resources>
    <string name="play">游乐园</string>
    <string name="film">电影票</string>
    <string name="app_name">乐行</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="password">密码</string>
    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="email">邮箱</string>
    <string name="identity">身份证</string>
    <string name="number">手机号</string>
    <string name="travel">出行</string>
    <string name="amusement">娱乐</string>
    <string name="message">最新推送</string>
    <string name="form">我的订单</string>
    <string name="airplane">飞机票</string>
    <string name="train">火车票</string>
    <string name="bus">汽车票</string>
    <string name="boat">轮船票</string>
    <string name="date">出发日期</string>
    <string name="date_show">2018-01-02</string>
    <string name="time">出发时间</string>
    <string name="seat">席位</string>
    <string name="unlimited">不限</string>
    <string name="query">查询</string>
    <string name="chengdu">成都</string>
    <string name="xian">西安</string>
    <string name="movie">电影票</string>
    <string name="drama">话剧票</string>
    <string name="sight">景点门票</string>
    <string name="park">游乐园</string>
    <string name="zoo">动物园</string>
    <string name="aquarium">水族馆</string>
    <string name="check">验证</string>
    <string name="email_check">激活邮箱</string>
    <string name="email_check_send">验证信息发送成功</string>
    <string name="code_tip">验证码</string>
    <string name="times">跳过 \t\t\t\t %1$d秒</string>
    <string name="prompt_email">请输入邮箱</string>
    <string name="prompt_code">请输入验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="ok_code">验证验证码</string>
    <string name="upgrade_src">修改密码</string>
    <string name="ok">确认</string>
    <string name="sending_code">正在发送验证码</string>
    <string name="return_main">回到主页</string>
    <string name="old_scr">请输入新密码</string>
    <string name="new_scr">请确认输入新密码</string>
    <string name="ok_src">确认修改新密码</string>
    <string name="renew_new">两次密码输入不同</string>
    <string name="check_src">正在验证</string>
    <string name="error_field_required">请填写</string>
    <string name="no_admin">该用户尚未注册</string>
    <string name="code_isfalse">验证码不正确</string>
    <string name="new_pass_is_right">密码修改成功</string>
    <string name="new_pass_is_flase">密码修改失败</string>
    <string name="permission_rationale">通讯异常</string>
    <string name="upload">正在加载信息</string>
    <string name="update_right">修改成功</string>


    <string name="account_tip">请输入用户名</string>
    <string name="password_tip">请输入密码</string>

    <string name="emailOrtel">手机号/邮箱</string>
    <string name="pass">请输入密码</string>
    <string name="code">请输入验证码</string>
    <string name="code_get_ok">验证码发送成功</string>
    <string name="s">秒</string>

    <string name="account_error_tip">账户或者密码错误</string>
    <string name="register_ok">注册成功</string>
    <string name="register_error">该用户已经注册</string>
    <string name="account_inside_error">数据异常，请稍后再试</string>
    <string name="account_right">欢迎进入</string>
    <string name="plaese_check_tel">请验证手机号</string>
    <string name="retrieve">找回密码</string>
    <string name="authcode">发送验证码</string>


    <string name="title">我是标题</string>
    <string name="content">我是内容</string>
    <string name="nature">属性</string>

    <string name="internet_error">网络异常</string>
    <string name="amusement_all">娱乐创造生活</string>
    <string name="function">动态</string>
    <string name="info">个人信息</string>
    <string name="register_title">注册</string>
    <string name="travel_tip">乘兴而行,兴至而归</string>
    <string name="info_main">消息</string>
    <string name="title_activity_wel">WelActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="login_out">注销</string>
    <string name="warn_input">请填写此字段</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="TicketName">我是票名</string>
    <string name="PriceTimeLimit">预定信息</string>
    <string name="ProductUnitName">套票</string>
    <string name="scenery">地理位置</string>
    <string name="country">我是国家</string>
    <string name="introduce">我是介绍</string>

    <string name="scenery_play">景点门票</string>
    <string name="sing">演唱会门票</string>


    <string name="start">请选择初始地</string>
    <string name="destination">请选择目的地</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="news">请输入信息</string>

</resources>
