<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amuse"
    android:orientation="vertical"
    tools:context="com.gy.ticket.AmusementActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_amuse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/amusement"/>

    <TextView
        android:id="@+id/tv_amusement_amusement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="30dp"
        android:text="@string/amusement_all"
        android:textColor="#3e46f7"
        android:textSize="23sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:shrinkColumns="0,1,2"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_amusement_park"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/park" />

            <ImageView
                android:id="@+id/iv_amusement_drama"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/drama" />

            <ImageView
                android:id="@+id/iv_amusement_sight"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/sight" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/park"
                android:textColor="#0073a8"
                android:textSize="20sp" />

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_drama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drama"
                android:textColor="#0073a8"
                android:textSize="20sp" />

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_sight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sight"
                android:textColor="#0073a8"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_amusement_film"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/movie" />

            <ImageView
                android:id="@+id/iv_amusement_zoo"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:srcCompat="@drawable/zoo" />

            <ImageView
                android:id="@+id/iv_amusement_aquarium"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/aquarium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_aquarium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textColor="#0073a8"
                android:textSize="20sp" />

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_zoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoo"
                android:textColor="#0073a8"
                android:textSize="20sp" />

            <TextView
                android:gravity="center"
                android:id="@+id/tv_amusement_park"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aquarium"
                android:textColor="#0073a8"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
