<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <com.loopj.android.image.SmartImageView
        android:id="@+id/scenery_icon"
        android:layout_width="80dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lex"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scenery_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/siv_icon"
            android:ellipsize="end"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/scenery"
            android:textColor="#000000"
            android:textSize="18sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/scenery_item_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/siv_icon"
                android:layout_alignStart="@+id/tv_news_item_title"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:maxLength="26"
                android:singleLine="true"
                android:text="@string/introduce"
                android:textColor="#99000000"
                android:textSize="14sp" />

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/scenery_item_nature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="30dp"
                    android:text="@string/country"
                    android:textColor="#99000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
